--- a/exo_decoupage_molengeek/public/css/style.css
+++ b/exo_decoupage_molengeek/public/css/style.css
@@ -1,3 +1,11 @@
+body{
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  
+
+}
+
 #newsletter{
   background-color: purple;
   height: 50px;
@@ -23,28 +31,40 @@ input{
 }
 /*fin navbar purple*/
 
-nav{
+
+.menu>ul{
+  height: 100px;
+  width: 1287px;
   display: flex;
+  justify-content:space-evenly;
   align-items: center;
+  
 
 }
-.menu>ul>li{
+
+
+nav{
+  height: 100px;
+  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items:center;
+  border-bottom: 1px solid #000;
+  width: 100%;
 }
-
-
-
-
 
 #newsletter img{
   width: 50px;
-
-
 }
+nav>div>img{
+  height: 90px;
+  width: 50px%;
+  margin-left:0;
+}
+
 .logo{
   display: inline-block;
+  margin-left: 0;
 }
 
 #contenu{
@@ -53,9 +73,33 @@ nav{
     margin-right: auto;
 }
 
+#contenu>p,ul,h2{
+  text-align:justify;
+}
+
+#contenu>h1{
+  text-align:center;
+}
+
+
+
+/*footer début*/
 
 #champs_newsletter div{
   display: flex;
   align-items: center;
   justify-content: center;  
 }
+
+.section{
+  height: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 1px solid lightslategray;
+}
+footer>p{
+  text-align:center;
+}
+
